# DiscreteMath-combinatoric

./: CMakeLists.txt  Lab1.sln  Lab1.vcxproj  Lab1.vcxproj.filters  calc.cpp  calc.h  error.cpp  error.h  main.cpp  parser.cpp  parser.h  report.docx  ТЗ1 комбинаторика.md
